Ajustes de rutas

--- a/Subindex1.html
+++ b/Subindex1.html
@@ -137,10 +137,10 @@
       <div class="container">
         <h3 class="float-md-start mb-0">💀</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link fw-bold py-1 px-0" href="/cover/index.html">Home</a>
-          <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/Subindex1.html">Música</a>
-          <a class="nav-link fw-bold py-1 px-0" href="/blog/Subindex2.html">Expresión artística</a>
-          <a class="nav-link fw-bold py-1 px-0" href="/jumbotron/Subindex3.html">Filosofía social</a>
+          <a class="nav-link fw-bold py-1 px-0" href="./cover/index.html">Home</a>
+          <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="./Subindex1.html">Música</a>
+          <a class="nav-link fw-bold py-1 px-0" href="./blog/Subindex2.html">Expresión artística</a>
+          <a class="nav-link fw-bold py-1 px-0" href="./jumbotron/Subindex3.html">Filosofía social</a>
         </nav>
       </div>
       </div>
