--- a/cover/index.html
+++ b/cover/index.html
@@ -27,10 +27,10 @@
       <div class="container">
         <h3 class="float-md-start mb-0">💀</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/cover/index.html">Home</a>
-          <a class="nav-link fw-bold py-1 px-0" href="/Subindex1.html">Música</a>
-          <a class="nav-link fw-bold py-1 px-0" href="/blog/Subindex2.html">Expresión artística</a>
-          <a class="nav-link fw-bold py-1 px-0" href="/jumbotron/Subindex3.html">Filosofía social</a>
+          <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link fw-bold py-1 px-0" href="../Subindex1.html">Música</a>
+          <a class="nav-link fw-bold py-1 px-0" href="../blog/Subindex2.html">Expresión artística</a>
+          <a class="nav-link fw-bold py-1 px-0" href="../jumbotron/Subindex3.html">Filosofía social</a>
         </nav>
       </div>
     </div>
@@ -47,12 +47,12 @@
           </p>
         </div>  
         <div class="col-md-6">
-          <img src="https://static.wikia.nocookie.net/ancientworlds/images/d/d1/Ankh_%28SVG%29_01.svg.png/revision/latest?cb=20231229024220" width="150" class="img-fluid rounded" alt="Arte Gótico">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Ankh_%28SVG%29_01.svg/640px-Ankh_%28SVG%29_01.svg.png" width="150" class="img-fluid rounded" alt="Arte Gótico">
         </div>
       </div>
     </div>
     </main>
-
+    <div class="p-4 p-md-5 mb-4 rounded bg-transparent text-white">
     <div class="row align-items-center my-4">
       <div class="col-md-6">
         <h2>¿Qué es la Subcultura Gótica?</h2>
@@ -74,6 +74,7 @@
       <div class="col-md-6 text-center">
         <img src="https://cubecinema.com/media/diary/siouxsie.jpg" width="300" class="img-fluid rounded" alt="goth">
       </div>
+    </div>
     </div>  
     
 
