--- a/Subindex1.html
+++ b/Subindex1.html
@@ -141,6 +141,9 @@
           <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="./Subindex1.html">Música</a>
           <a class="nav-link fw-bold py-1 px-0" href="./blog/Subindex2.html">Expresión artística</a>
           <a class="nav-link fw-bold py-1 px-0" href="./jumbotron/Subindex3.html">Filosofía social</a>
+          <a class="nav-link fw-bold py-1 px-0" href="../tarea 1/index.html">Tarea 1</a>
+          <a class="nav-link fw-bold py-1 px-0" href="./Tarea 2/index.html">Tarea 2</a>
+          <a class="nav-link fw-bold py-1 px-0" href="../tarea 3/Index.HTML">Tarea 3</a>
         </nav>
       </div>
       </div>
